Updated security config file with the suggested fixes